--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,26 @@
-:root {
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+  user-select: none;
+  /*margin: 0;*/
+}
+
+body {
+  margin: 0;
+  place-items: center;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -11,23 +33,19 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
 }
+
 
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -46,9 +64,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -65,4 +85,87 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.game-bar {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  border: 1px solid red;
+  padding: 4px 8px;
+}
+.battle-area {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.team-area {
+  display:flex;
+  height: 70vh;
+  width: 50%;
+  border: 1px solid aqua;
+}
+.player-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.player-hero {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  height: 250px;
+  width: 250px;
+  border: 1px solid white;
+}
+.player-units {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 33%;
+}
+.card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid yellow;
+  height: calc(30vh - 66px);
+}
+.card {
+  display:flex;
+  background-color: rgb(98, 150, 199);
+  width: 8vw;
+  /*max-height: 80%;*/
+  aspect-ratio:  9/14;
+  box-sizing: border-box;
+  border: 1px solid rgb(53, 102, 251);
+  border-radius: 4px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 0;
+  color: white;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+  /*display: flex;*/
+  /*background-color: rgb(209, 230, 249);*/
+  /*width: 8vw;*/
+  /*!* max-height: 80%; *!*/
+  /*aspect-ratio: 9 / 14;*/
+  /*box-sizing: border-box;*/
+  /*border: 1px solid rgb(53, 102, 251);*/
+  /*border-radius: 4px;*/
+  /*flex-direction: column;*/
+  /*justify-content: center;*/
+  /*position: absolute;*/
+  /*top: 75%;*/
+  /*left: 303px;*/
+  /*!* bottom: 0; *!*/
+  /*transition: all 0.2s ease-in-out;*/
 }
